sample-ingress1/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Server: LocalK8sCls";
spec:
  rules:
    - host: apple.k8s.local
      http:
        paths:
          - backend:
              serviceName: apple-service
              servicePort: 5678
            path: /apple
